k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smstore-file-service
spec:
  selector:
    app: smstore-file-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7000
      name: http
